# aria-voice-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTICS.md  Dockerfile  IMPROVEMENT_PROMPTS.md  LICENSE  README.md  REVIEW.md  VERIFICATION_GUIDE.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  backchanneling.py  barge_in_logger.py  bot.py  config.py  context_manager.py  emotion_mapper.py  intent_router.py  latency_tracker.py  learning.py  main.py  metrics.py  prompts.py  runner_preflight.py
agent/core/: __init__.py  context_manager.py  errors.py  pipeline.py  session.py
agent/database/: __init__.py  db.py  manager.py  models.py  seed.py
agent/database/migrations/: 001_initial.sql  002_appointment_slot_unique.sql
agent/database/repositories/: __init__.py  appointments.py  callers.py  clinic_info.py  doctors.py
agent/observability/: __init__.py  health.py  logging.py
agent/processors/: __init__.py  barge_in_ack.py  function_call_filter.py
agent/services/: __init__.py  appointments.py  caller_memory.py  clinic_info.py  doctors.py  escalation.py  medical_records.py  reminders.py
agent/tools/: __init__.py  appointments.py  caller_memory.py  clinic_info.py  escalation.py  handlers.py  registry.py
agent/transport/: __init__.py  factory.py  telephony.py  webrtc.py
agent/utils/: __init__.py  redact.py  timeutil.py
docs/: MCP_AND_MEMORY.md  ROADMAP.md  TEST_CHECKLIST.md  TOOLS.md
docs/internal/: LEARNING.md
scripts/: healthcheck.py  run_tests.ps1  seed_db.py
tests/: conftest.py  test_errors.py  test_review_fixes.py
